--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -41,8 +41,8 @@
             <span class="navbar-icon-notifications"></span> <span class="badge badge-secondary badge-pill notifications-count"></span><span class="nav-link-text">Notifications</span>
           </a>
           <div class="dropdown-menu py-0" aria-labelledby="notificationsDropdownLink">
-            <ul class="list-group list-group-flush" id="notificationsContainer">
-            </ul>
+            <ul class="list-group list-group-flush" id="notificationsContainer"></ul>
+            <button type="button" class="button grey-button clear-all-notifications">Clear all notifications</button>
           </div>
         </li>
         <li class="nav-item">
