--- a/views/partials/timeGraph.handlebars
+++ b/views/partials/timeGraph.handlebars
@@ -8,7 +8,7 @@
               {{#each datapoint}}
               {
               fill:false,
-              borderColor: "rgb(75, 192, 192)",
+              borderColor: "{{this.color}}",
               lineTension: 0,
               label: "{{this.label}}",
               data: [
